# ChangeLog for media-sound/soundconverter
# Copyright 1999-2006 Gentoo Foundation; Distributed under the GPL v2
# $Header: /var/cvsroot/gentoo-x86/media-sound/soundconverter/ChangeLog,v 1.3 2006/06/03 04:26:12 hanno Exp $

*soundconverter-0.8.6 (03 Jun 2006)

  03 Jun 2006; Hanno Boeck <hanno@gentoo.org>
  +files/soundconverter-0.8.6-makefile-fix.diff,
  +soundconverter-0.8.6.ebuild:
  Version bump and updated Makefile patch, thanks to Sebi Ryffel in #134686.

  30 Jan 2006; Patrick McLean <chutzpah@gentoo.org>
  soundconverter-0.8.3.ebuild:
  Added ~amd64.

*soundconverter-0.8.3 (25 Jan 2006)

  25 Jan 2006; Hanno Boeck <hanno@gentoo.org>
  +files/soundconverter-0.8.3-makefile-fix.diff, +metadata.xml,
  +soundconverter-0.8.3.ebuild:
  Initial commit.
