@@ -11,6 +11,7 @@ RMD160 49a4a867f78d78cee81511f9572e1349c970019b files/soundconverter-0.8.6-makef
 SHA256 0fccb26a8c1ad927c99d86b7af75a74b662e0481449d8b1996813ec66a066013 files/soundconverter-0.8.6-makefile-fix.diff 593
 DIST soundconverter-0.8.3.tar.gz 47008
 DIST soundconverter-0.8.6.tar.gz 50819 RMD160 f1abe47ff0d6e3add52af3b692ae3fe0c9ea7513 SHA1 402895ecabb7d7509dc2478a88c0f25b7a2063bb SHA256 365f266aedf9b55be70f89c16ff6f56296e21db290d6667ff3e3eddc87d174ba
+DIST soundconverter-0.9.0.tar.gz 163802 RMD160 6f37bcc4b4ced1bcd207cf1666c79d0a82491047 SHA1 e88c8a53231c0a1d0da5a50ac5d3ca0bd025f824 SHA256 a41fbb6e50d8f086778a7ab676e18e8fa5cb5dc6a8a509ec24a61c2bacc017c8
 EBUILD soundconverter-0.8.3.ebuild 1074 RMD160 ea532ad5e8d516e26d78ea104c8fb425c847ab6d SHA1 017487b4a644485be34273325f5b2b08c102ef6a SHA256 2d45cb6a14b7387e96cc7fc5ad15396f89a1c89820afca5b10b200b75f1ab4cd
 MD5 5552890682b3195a7c9e09f82b889bb0 soundconverter-0.8.3.ebuild 1074
 RMD160 ea532ad5e8d516e26d78ea104c8fb425c847ab6d soundconverter-0.8.3.ebuild 1074
@@ -19,10 +20,14 @@ EBUILD soundconverter-0.8.6.ebuild 1078 RMD160 b1a625044f0ca03a4f379bd7afa0b3f27
 MD5 45d52ee7a585f1aba190a2c19718869e soundconverter-0.8.6.ebuild 1078
 RMD160 b1a625044f0ca03a4f379bd7afa0b3f27825afe8 soundconverter-0.8.6.ebuild 1078
 SHA256 f53a15171a23755097355d4727d2abd44c79fdbe47a86730268970e5cc87c91f soundconverter-0.8.6.ebuild 1078
-MISC ChangeLog 764 RMD160 d20160c0349c97e42495a8c8cc4a63ef6e6c6d39 SHA1 7ec22346185e0ca675a99923dbc73872e8dcddd3 SHA256 c98e7e0f6783a2a586cbbc378718eb83e93d09bd7dfb29a2f6db2f254c66f59b
-MD5 68bf0ae88a08cd83b08d72ea6eae030b ChangeLog 764
-RMD160 d20160c0349c97e42495a8c8cc4a63ef6e6c6d39 ChangeLog 764
-SHA256 c98e7e0f6783a2a586cbbc378718eb83e93d09bd7dfb29a2f6db2f254c66f59b ChangeLog 764
+EBUILD soundconverter-0.9.0.ebuild 1053 RMD160 c04c655a9c00b13e92ce98d2ea0a96e306a6a4b0 SHA1 b8d91e86590a55e7060bfde5bf9395bfc6b4a9ba SHA256 49507ee37b3256810e9c10afea63021fe1502c93a6a68ec706a313fb0c7dc1db
+MD5 9496d5f999a33e2b3ece978b0ccb6976 soundconverter-0.9.0.ebuild 1053
+RMD160 c04c655a9c00b13e92ce98d2ea0a96e306a6a4b0 soundconverter-0.9.0.ebuild 1053
+SHA256 49507ee37b3256810e9c10afea63021fe1502c93a6a68ec706a313fb0c7dc1db soundconverter-0.9.0.ebuild 1053
+MISC ChangeLog 894 RMD160 27f6c082c716dcd897e0dfc0519b3f90b606909b SHA1 611bb6a0eebb043563dd2b5ecfcfddf2d641f248 SHA256 13a53c9315c1dd54fa398233aa733a895397d3aa6a088b2640f4734becdf7b96
+MD5 438ab7985e18204caf7763c042fc5b66 ChangeLog 894
+RMD160 27f6c082c716dcd897e0dfc0519b3f90b606909b ChangeLog 894
+SHA256 13a53c9315c1dd54fa398233aa733a895397d3aa6a088b2640f4734becdf7b96 ChangeLog 894
 MISC metadata.xml 219 RMD160 c3357aa8edfab7033261267720250a36fc96e7f8 SHA1 fef872e700565309235dbfe0f45d81a1692829c0 SHA256 c76952c442b16a3d2efe40e95e84f1110ec9b13775882012b30a25ca3b063ada
 MD5 d9885b371cf444e9a26ef0f8a0418d9b metadata.xml 219
 RMD160 c3357aa8edfab7033261267720250a36fc96e7f8 metadata.xml 219
@@ -33,10 +38,13 @@ SHA256 0522cd6719c8659da99bc201970d37f48dbbc1dc4207d8a951e32f6a402607eb files/di
 MD5 489dd818b01b0ceb618171b1784eaca7 files/digest-soundconverter-0.8.6 259
 RMD160 d0611c42746902b7e084dd8048aa2bc0bf0dd5fe files/digest-soundconverter-0.8.6 259
 SHA256 e3fbde887990b1df5aeb8c5ca56b4d3921c77ffa73f057505685fdfd7ff1c8b2 files/digest-soundconverter-0.8.6 259
+MD5 a73f9d4acfa821d6111502b1843a3838 files/digest-soundconverter-0.9.0 262
+RMD160 acedf4691e86b299c89c6b71ff2fbbb68dc1e1f9 files/digest-soundconverter-0.9.0 262
+SHA256 c233d38cc3329712b68e099d9decd28d3b3bcd67037bcd808dd1ca90786e803a files/digest-soundconverter-0.9.0 262
 -----BEGIN PGP SIGNATURE-----
-Version: GnuPG v1.4.3 (GNU/Linux)
+Version: GnuPG v1.4.5 (GNU/Linux)
 
-iD8DBQFEgQ+ar2QksT29OyARAksGAJ9TirgYgcPeJpaTiT/aESKkV8tOSQCfWCuY
-Tub09UIAzFSLtt4WDFCXNJE=
-=7BCv
+iD8DBQFE+1zKr2QksT29OyARAl3ZAKCEOe3EP4cl/8sHgCpFI4laUPMpMQCeIT75
+tcQQZnMNFyoJV61rSH15O5k=
+=BSx9
 -----END PGP SIGNATURE-----
