@@ -1,0 +1,3 @@
+MD5 4158a1ed749a75fc99908da58a919fdc soundconverter-0.9.0.tar.gz 163802
+RMD160 6f37bcc4b4ced1bcd207cf1666c79d0a82491047 soundconverter-0.9.0.tar.gz 163802
+SHA256 a41fbb6e50d8f086778a7ab676e18e8fa5cb5dc6a8a509ec24a61c2bacc017c8 soundconverter-0.9.0.tar.gz 163802
