@@ -1,6 +1,11 @@
 # ChangeLog for media-sound/soundconverter
 # Copyright 1999-2006 Gentoo Foundation; Distributed under the GPL v2
-# $Header: /var/cvsroot/gentoo-x86/media-sound/soundconverter/ChangeLog,v 1.3 2006/06/03 04:26:12 hanno Exp $
+# $Header: /var/cvsroot/gentoo-x86/media-sound/soundconverter/ChangeLog,v 1.4 2006/09/03 22:52:41 hanno Exp $
+
+*soundconverter-0.9.0 (03 Sep 2006)
+
+  03 Sep 2006; Hanno Boeck <hanno@gentoo.org> +soundconverter-0.9.0.ebuild:
+  Version bump.
 
 *soundconverter-0.8.6 (03 Jun 2006)
 
